--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-com.example.saveToXML.errorInvalidCommand = Invalid command entered
-com.example.saveToXML.errorUniqueId = The value pair "depCode" - "depJob" must be unique.
-com.example.saveToXML.errorParameters = Parameters not entered
-com.example.saveToXML.fileExtension = .xml
-com.example.saveToXML.commandSave = save
-com.example.saveToXML.commandSync = sync
-com.example.saveToXML.messageSave = Start saving database to file
-com.example.saveToXML.messageSync = Starting synchronization with database the file
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/demoDB
 spring.datasource.username=usr
 spring.datasource.password=pwd
@@ -31,7 +22,7 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Yekaterinburg
 spring.jackson.date-format=dd.MM.yyyy HH:mm:ss
 
-logging.level.com.example.saveToXML=INFO
+logging.level.com.example.saveToXML=TRACE
 #logging.level.org.springframework=TRACE
 #logging.level.org.hibernate=DEBUG
-logging.level.root=INFO
+logging.level.root=ERROR
